[tool.poetry]
name = "results"
version = "0.1.0"
description = ""
authors = ["crxwns"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = ["D", "ANN101", "FA102", "EM101", "TRY003", "ARG002"]

[tool.ruff.extend-per-file-ignores]
"examples/*" = ["INP001", "T201", "ARG005", "PLR2004"]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
