[tool.poetry]
name = "results"
version = "0.1.2"
description = ""
authors = ["crxwns"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.5.1"

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = ["D", "ANN101", "FA102", "EM101", "TRY003", "ARG002"]

[tool.ruff.lint.extend-per-file-ignores]
"examples/*" = ["INP001", "T201", "ARG005", "PLR2004"]
"tests/*" = ["S101", "ARG005", "PLR2004"]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
